# ws-gateway-monorepo

./: .gitignore  CLIENT_INSTALL.md  RAILWAY_DEPLOY.md  README.md
.github/workflows/: build-client.yml
client/: .env.example  README.md  install.sh  pyproject.toml  routing_config.yaml.example  ws-client.service
client/src/ws_client/: __init__.py  __main__.py  proxy.py
server/: .env.example  README.md  main.py  railway.toml  requirements.txt
server/src/: scheduler.py
server/src/api/: routes.py
server/src/auth/: __init__.py  jwt_handler.py
server/src/config/: settings.py
server/src/monitoring/: __init__.py  grafana_cloud.py  metrics.py
server/src/redis_client/: __init__.py  client.py
server/src/telegram_bot/: __init__.py  bot.py  logger.py
server/src/websocket/: __init__.py  server.py
